--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             <input type="text" name="filter" id="filter" class="form-control d-block w-75 m-auto" placeholder="Filter Your Product">
         </div>
         <div class="card card-body">
+            <span class="msg">
+                <!-- <div class="bg-danger d-flex align-items-center justify-content-center">
+                    <p class="py-2 fs-2 text-light"></p>
+                </div> -->
+            </span>
             <div class="list-group collection">
                 <!-- <div class="d-flex align-items-center justify-content-between ">
                     <div class="d-flex align-items-center justify-content-between w-75 my-4">
@@ -29,18 +34,14 @@
                     </div>
                 </div> -->
             </div>
-            <span class="msg ">
-                <!-- <div class="bg-danger d-flex align-items-center justify-content-center">
-                    <p class="py-2 fs-2 text-light"></p>
-                </div> -->
-            </span>
+            
             <form action="" class="m-auto w-100">
                 <div class="d-flex align-items-center justify-content-between my-4">
                     <input type="text" class="form-control d-block w-75 m-auto me-3 product-name" placeholder="Name">
                     <input type="text" class="form-control d-block w-75 m-auto ms-3 product-price" placeholder="Price">
                 </div>
                 <div class="d-flex align-items-center justify-content-center w-100">
-                    <button class="btn bg-info text-light w-100" type="submit">Submit</button>
+                    <button class="btn bg-info text-light w-100 submit-btn" type="submit">Submit</button>
                 </div>
             </form>
         </div>
